--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "justgage": "^1.6.1",
     "leaflet": "^1.9.4",
     "listree": "^0.0.6",
+    "lucide-vue-next": "^0.563.0",
     "magic.css": "^1.4.8",
     "mobius1-selectr": "2.2.0",
     "nouislider": "^15.8.1",
